Remove jacoco tasks, add 'coverage' task
Signed-off-by: Bogdan Vaneev <warchantua@gmail.com>